--- a/app/src/main/res/layout/locals_extra.xml
+++ b/app/src/main/res/layout/locals_extra.xml
@@ -1,72 +1,241 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- ImageView covering 25% of the screen -->
+
+    <!-- TextView for Event Name -->
+
+    <!-- TextView for Address -->
+
+    <!-- TextView for Time/Date -->
+
+    <!-- Button to see who is going -->
+
+    <!-- TextView for Event Description -->
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_weight="1"
         android:scaleType="centerCrop"
-        android:src="@drawable/randomprofilepic1" />
+        android:src="@drawable/randomprofilepic1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- TextView for Event Name -->
-    <TextView
-        android:id="@+id/eventNameTextView"
-        android:layout_width="match_parent"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/localEventInfoCard"
+        android:layout_width="390dp"
+        android:layout_height="150dp"
+        android:background="@drawable/rounded_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview"
+        android:layout_marginTop="5dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/eventNameTextView"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:text="Event Name"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:ellipsize="marquee"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:id="@+id/startTimeTextView"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:text="Event Time/Date"
+                android:textSize="16dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/eventNameTextView"/>
+
+
+            <TextView
+                android:id="@+id/endTimeTextView"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:text="Event Time/Date"
+                android:textSize="16dp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/startTimeTextView" />
+
+            <TextView
+                android:id="@+id/addressTextView"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:text="Event Address"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="10dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/localEventDescriptionCard"
+        android:layout_width="390dp"
+        android:layout_height="150dp"
+        android:background="@drawable/rounded_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/localEventTagsCard"
+        android:layout_marginTop="5dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/descriptionTextView"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:text="Event Description"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="5dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/localEventTagsCard"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageview"
-        android:text="Event Name"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:background="@drawable/rounded_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/localEventInfoCard"
+        android:layout_marginTop="5dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <!-- TextView for Address -->
-    <TextView
-        android:id="@+id/addressTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/eventNameTextView"
-        android:text="Event Address"
-        android:textSize="16sp" />
-
-    <!-- TextView for Time/Date -->
-    <TextView
-        android:id="@+id/timeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/addressTextView"
-        android:text="Event Time/Date"
-        android:textSize="16sp" />
-
-    <!-- Button to see who is going -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/localEventTags"
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                android:text="Event Description"
+                android:textSize="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="10dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
     <Button
         android:id="@+id/see_who_is_going"
-        android:layout_width="wrap_content"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/timeTextView"
-        android:text="SEE WHO IS GOING" />
-
-    <!-- TextView for Event Description -->
-    <TextView
-        android:id="@+id/descriptionTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/see_who_is_going"
-        android:text="Event Description"
-        android:textSize="16sp" />
+        android:layout_marginTop="15dp"
+        android:text="SEE WHO IS GOING"
+        style="@style/EventCardActionButton"
+        android:backgroundTint="@color/InviteOthersButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/localEventDescriptionCard"
+        />
 
     <!-- Green button to join event -->
+
     <Button
         android:id="@+id/join_event"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/descriptionTextView"
+        android:layout_width="390dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
         android:text="JOIN EVENT"
-        android:background="@android:color/holo_green_dark"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        style="@style/SlightRoundedCorners"
+        android:backgroundTint="@color/ImInButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/see_who_is_going" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/nearbyStaticTextView"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:text="Nearby"
+        android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/join_event"
+        android:layout_marginTop="15dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/nearbyEstablishmentRV"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nearbyStaticTextView"
+        tools:listitem="@layout/event_page_local_est_mini_item"/>
+
+    <TextView
+        android:id="@+id/addressMapsStaticTextView"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:text="Address"
+        android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nearbyEstablishmentRV"
+        android:layout_marginTop="15dp"/>
+
+
+    <TextView
+        android:id="@+id/addressMapsTextView"
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:text="Event Address"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addressMapsStaticTextView"
+        android:layout_marginTop="15dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/mapViewContainer"
+        android:layout_width="375dp"
+        android:layout_height="375dp"
+        android:background="@drawable/rounded_text_entry"
+        app:layout_constraintTop_toBottomOf="@id/addressMapsTextView"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:cardCornerRadius="15dp">
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:id="@+id/mapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <View
+            android:id="@+id/mapOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
