--- a/app/src/main/res/layout/activity_add_establishment.xml
+++ b/app/src/main/res/layout/activity_add_establishment.xml
@@ -110,7 +110,8 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:id="@+id/mapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            tools:context=".MapsActivity" />
         <View
             android:id="@+id/mapOverlay"
             android:layout_width="match_parent"
