--- a/app/src/main/res/layout/activity_add_party.xml
+++ b/app/src/main/res/layout/activity_add_party.xml
@@ -167,7 +167,8 @@
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:id="@+id/mapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    tools:context=".MapsActivity" />
                 <View
                     android:id="@+id/mapOverlay"
                     android:layout_width="match_parent"
